feat: Implement dynamic restaurant configuration updates for meta tags and manifest, enhancing PWA support and user experience

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Ravintola Babylon",
-  "short_name": "babylon",
+  "short_name": "Babylon",
   "description": "Finnish restaurant offering pizza, kebab, and traditional cuisine",
   "theme_color": "#dc2626",
   "background_color": "#ffffff",
