feat: Rename restaurant from Ravintola Babylon to Pizzeria Antonio and update related configurations
- Updated structured data generation to reflect new restaurant name and URL.
- Changed service highlights and hours section to use Pizzeria terminology.
- Modified structured address input to use new restaurant name and user agent.
- Updated universal header and restaurant configuration to reflect new branding.
- Changed email service to use new restaurant name and contact details.
- Updated PWA service to manage authentication tokens under new restaurant name.
- Adjusted restaurant context to use new configuration.
- Updated thermal printer service to print new restaurant details.
- Modified branches, home, lunch, privacy, and terms pages to reflect new restaurant name.
- Added placeholder images for menu items without images.
- Updated Vite configuration to point to new admin service.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "Ravintola Babylon",
-  "short_name": "babylon",
-  "description": "Finnish restaurant offering pizza, kebab, and traditional cuisine",
-  "theme_color": "#dc2626",
+  "name": "Pizzeria Antonio",
+  "short_name": "antonio",
+  "description": "Italian restaurant offering authentic pizza and kebab",
+  "theme_color": "#16A34A",
   "background_color": "#ffffff",
   "display": "standalone",
   "orientation": "portrait",
