--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,31 +10,23 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "/generated-icon.png",
+      "src": "/logo.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/generated-icon.png",
+      "src": "/logo.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/generated-icon.png",
+      "src": "/logo.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     }
   ],
-  "categories": ["business", "food", "productivity"],
-  "screenshots": [
-    {
-      "src": "/generated-icon.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "form_factor": "narrow"
-    }
-  ]
+  "categories": ["business", "food", "productivity"]
 }
